--- a/課題.md
+++ b/課題.md
@@ -35,3 +35,26 @@ console.log('hello world');
 | 手順 7  | 生成されている                                    |
 | 手順 9  | 更新されていない (tsc コマンド実行後は更新される) |
 | 手順 10 | 更新されない (tsc コマンド実行後も更新されない)   |
+
+## 課題 1-2
+
+> 以下は CommonJS 形式の モジュールのインポートです。
+> ES モジュールの構文で index.ts を記述してください。
+
+```TypeScript:util.ts
+export function greetings(name: string) {
+  console.log(`hello, ${name}`);
+}
+```
+
+```TypeScript:index.ts
+import util = require('./util');
+util.greetings('hoge');
+```
+
+`.\src\index.ts` にて実装。
+
+```TypeScript:index.ts
+import { greetings } from './util';
+greetings('hoge');
+```
