--- a/課題.md
+++ b/課題.md
@@ -2,6 +2,8 @@
 
 ## 課題 1-1
 
+> 以下の手順を実行して、動作を確認してください。
+>
 > 1. src ディレクトリを対象にするよう、tsconfig.json を修正してください。
 
 ```JSON
@@ -57,4 +59,36 @@ util.greetings('hoge');
 ```TypeScript:index.ts
 import { greetings } from './util';
 greetings('hoge');
+```
+
+## 課題 2-1
+
+> 『Node.js & TypeScript のプロジェクト作成』の内容を踏まえて、以下の手順を実行した際にどうなるかを確認してください。
+>
+> 1. tsconfig.json を別名で退避する
+> 2. ターミナルから『Node.js & TypeScript のプロジェクト作成』のとおりに tsc --init を再実行する
+> 3. src ディレクトリに TS ファイルを用意する（例: index.ts）
+> 4. ターミナルから 3 で用意した TS ファイルをコンパイルする（例: tsc src/index.ts）
+> 5. ターミナルから npm run buil を実行する（npx tsc でも可）
+
+| 手順   | 確認結果                                                                              |
+| :----- | :------------------------------------------------------------------------------------ |
+| 手順 2 | 新たに `tsconfig.json` が生成された                                                   |
+| 手順 4 | `.\src\project.js` が生成された                                                       |
+| 手順 5 | `.\lib\`に js ファイルが生成される<br>`.\src\` に無い `*.ts` がある場合エラー文が出る |
+
+```sh
+node ➜ /workspaces/20220721_traning (main ✗) $ npm run build
+
+> 20220721_traning@1.0.0 build
+> tsc -p .
+
+error TS6059: File '/workspaces/20220721_traning/hello.ts' is not under 'rootDir' '/workspaces/20220721_traning/src'. 'rootDir' is expected to contain all source files.
+  The file is in the program because:
+    Matched by include pattern '**/*' in 'tsconfig.json'
+
+
+Found 1 error.
+
+node ➜ /workspaces/20220721_traning (main ✗) $
 ```
