--- a/課題.md
+++ b/課題.md
@@ -92,3 +92,20 @@ Found 1 error.
 
 node ➜ /workspaces/20220721_traning (main ✗) $
 ```
+
+## 課題 2-2
+
+> [TypeScript: TSConfig リファレンス - すべての TSConfig のオプションのドキュメント](https://www.typescriptlang.org/tsconfig) または [tsconfig.json の全オプションを理解する（随時追加中） - Qiita](https://qiita.com/ryokkkke/items/390647a7c26933940470) を参照し、生成された tsconfig.json で有効になっている内容をまとめてください。
+
+| オプション                       |    値    | 内容                                                                               |
+| :------------------------------- | :------: | :--------------------------------------------------------------------------------- |
+| lib                              | es6, dom | `ES2015`と DOM 型のライブラリをコンパイルに使用する                                |
+| target                           |  es2016  | `ES2016`準拠で js ファイルを出力する                                               |
+| module                           | commonjs | import/export の記述は `CommonJS` 準拠で js ファイルを出力する                     |
+| rootDir                          |   src    | 出力ディレクトリの構造 は`src`の構造に合わせる                                     |
+| resolveJsonModule                |   true   | `*.json`をモジュールとしてインポートできる                                         |
+| outDir                           |   lib    | `lib`を出力ディレクトリとして指定                                                  |
+| esModuleInterop                  |   true   | `CommonJS`と`ES Modules`の両方でモジュールが使用できる記述で js ファイルを出力する |
+| forceConsistentCasingInFileNames |   true   | import のファイルパスで大文字 or 小文字を区別する                                  |
+| strict                           |   true   | `strict*`の型チェック設定をすべて有効にする                                        |
+| skipLibCheck                     |   true   | 型定義ファイルをチェックしない<br>型定義のコピーが複数存在してしまってる時等に有効 |
