--- a/課題.md
+++ b/課題.md
@@ -109,3 +109,44 @@ node ➜ /workspaces/20220721_traning (main ✗) $
 | forceConsistentCasingInFileNames |   true   | import のファイルパスで大文字 or 小文字を区別する                                  |
 | strict                           |   true   | `strict*`の型チェック設定をすべて有効にする                                        |
 | skipLibCheck                     |   true   | 型定義ファイルをチェックしない<br>型定義のコピーが複数存在してしまってる時等に有効 |
+
+## 課題 3-1
+
+> 以下のミックスイン用の関数を使って、Animal を拡張したクラスを作ってください。
+> また、クラスからインスタンスを生成して、各メソッドが実行できることを確認してください。
+
+```TypeScript
+type Constructor<T = {}> = new (...args: any[]) => T;
+
+/** 走る */
+function Runnable<TBase extends Constructor>(Base: TBase) {
+  return class extends Base {
+    run() {
+      console.log('Running!');
+    }
+  };
+}
+
+/** 鳴く */
+function Cryable<TBase extends Constructor>(Base: TBase) {
+  return class extends Base {
+    cry() {
+      console.log('Cring!');
+    }
+  };
+}
+
+/** 飛ぶ */
+function Flyable<TBase extends Constructor>(Base: TBase) {
+  return class extends Base {
+    fly() {
+      console.log('Flying!');
+    }
+  };
+}
+
+class Animal {}
+```
+
+`.\src\animal.ts` にミックスイン用関数を実装。
+`.\src\hawk.ts`, `.\src\tiger.ts`, `.\src\locust.ts` にて実装。
